package at.htl;

public class Announcement {
}
