package at.htl;

public class Message {
    String message;
}
