package at.htl;

public class OwnerComment {
}
