package at.htl;

public class OwnerMessage extends Message{
    User sender;
    User receiver;
}
