package at.htl;

public class Survey {
}
