package at.htl;

public class User {
}
