package at.htl;

public class UserMessage extends Message{
    User sender;
    User receiver;
}
